# agent-zoho

smartler_whatsapp_automation/: .env  .env.bkp  .env.swp  .zoho_client_secure.py.swp  MyReadMe.txt  config.py  gemini_post_training_data.jsonl  gemini_validation_data.jsonl  incontext_learning_accuracy.py  main.py  main.py.bkp  manager.py  manager.py.bkp  outlines_llm.py  pyproject.toml  scheduler.py  test.py  timestamp.txt  timestamp_utils.py  whatsapp_agent.py  whatsapp_agent_2.py  whatsapp_agent_2.py.bkp  whatsapp_group_names.json  zoho_client_secure.py
smartler_whatsapp_automation/google-cloud-sdk/.install/: bundled-python3-unix-linux-x86_64.snapshot.json  bundled-python3-unix.snapshot.json  gcloud-crc32c-linux-x86_64.snapshot.json  gcloud-deps-linux-x86_64.snapshot.json
smartler_whatsapp_automation/jsonlgenerator/: 1_extracted_data.jsonl  2_no_timestamp.jsonl  3_phone_to_userids.jsonl  4_phone_userid_map.json  data.json  gemini_finetuning_data.jsonl  print_sender_numbers.py  remove_timestamp.py  replace_phone_numbers.py  split_data.py  transform_to_gemini.py
smartler_whatsapp_automation/service_files/: whatsapp-bridge.service  zoho-agent.service
whatsapp-mcp/whatsapp-bridge/: go.mod  go.sum  main.go
